fixed alignment of new tweet form

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -24,7 +24,6 @@ body {
 }
 
 main {
-  position: relative;
   width: 90vw;
   margin: auto;
   top: 520px;
