--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -5,15 +5,15 @@ form {
 }
 
 .new-tweet {
-  flex-direction: column;
   display: flex;
+  flex-direction: column;
   margin: auto;
 }
 
 textarea {
   display: flex;
   border: none;
-  flex-basis: 100%;
+  resize: none;
   border-bottom: 5px solid black;
   background-color: transparent;
 }
