--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -7,8 +7,8 @@
   display: flex;
   flex-direction: column;
   flex-basis: 100%;
+  margin: 1em 0 1em 0;
   border: 2px solid black;
-  margin: 1em;
 }
 
 .tweet:hover{
@@ -39,7 +39,7 @@
 .tweet-footer {
   display: flex;
   justify-content: space-between;
-  margin: 1em;
+  margin: 0 0.5em 0 0.5em;
   border-top: 3px solid black;
 }
 
